Fix list on mobile

--- a/components/History/TransactionsList/TransactionsList.module.css
+++ b/components/History/TransactionsList/TransactionsList.module.css
@@ -58,6 +58,8 @@
   min-width: 0;
   flex: 0 0 auto;
   white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .headRow > span:nth-child(1),
@@ -72,17 +74,17 @@
 
 .headRow > span:nth-child(3),
 .row > span:nth-child(3) {
-  width: 60px;
+  width: 90px;
 }
 
 .headRow > span:nth-child(4),
 .row > span:nth-child(4) {
-  width: 45px;
+  width: 60px;
 }
 
 .headRow > span:nth-child(5),
 .row > span:nth-child(5) {
-  width: 50px;
+  width: 80px;
 }
 
 .iconButton {
